# investment-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 127714196.ipynb  exploratory_data_analysis.ipynb  yield_curve.ipynb
src/investment_analysis/: main.py
src/investment_analysis/constants/: colors.py  feature_names.py
src/investment_analysis/data/: get_fred_data.py  get_ft_data.py  get_raw_data.py  process_interim_data.py
src/investment_analysis/features/: parse_timestamp_to_datetime.py
src/investment_analysis/utils/: get_raw_data.py  parse_to_timestamp.py  process_interim_data.py  process_raw_data.py  request_url.py  write_to_data_file.py
tests/utils/: test_date_to_unix_timestamp.py
